# color_cpp

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: google_test.cmake  toolchain-linux-clang++11.cmake  toolchain-linux-g++11.cmake  toolchain-macosx-c++11.cmake  toolchain-travis-ci.cmake
color/: interpolation.cpp  interpolation.hpp  palette.cpp  palette.hpp  space.hpp  transformation.cpp  transformation.hpp
color/internal/: math.cpp  math.hpp
test/: test_palette.cpp  test_transformation.cpp  test_util.hpp
